--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,17 @@ test = [
   "pytest>=7",
   "tomli>=2; python_version < '3.11'",
 ]
+dev = [
+  "mypy>=1.8",
+  "ruff>=0.4",
+]
+
+[tool.mypy]
+python_version = "3.10"
+mypy_path = "src"
+packages = ["feature_prd_runner"]
+strict = true
+ignore_missing_imports = true
 
 [project.scripts]
 feature-prd-runner = "feature_prd_runner.runner:main"
