chore: checkpoint all current work

--- a/web/.gitignore
+++ b/web/.gitignore
@@ -11,6 +11,10 @@ node_modules
 dist
 dist-ssr
 *.local
+playwright-report
+test-results
+blob-report
+/.tmp
 
 # Editor directories and files
 .vscode/*
