--- a/web/package.json
+++ b/web/package.json
@@ -5,11 +5,17 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "lint": "tsc --noEmit --pretty false",
+    "check": "npm run lint && npm run test -- --run && npm run build",
     "preview": "vite preview",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage"
+    "test:coverage": "vitest --coverage",
+    "e2e": "playwright test",
+    "e2e:smoke": "playwright test e2e/smoke.spec.ts",
+    "e2e:ui": "playwright test --ui",
+    "screenshot:homepage": "rm -rf ../.tmp/playwright-screenshot && PLAYWRIGHT_PROJECT_DIR=../.tmp/playwright-screenshot playwright test e2e/homepage-screenshot.spec.ts --workers=1"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -21,10 +27,10 @@
     "@mui/x-data-grid": "^8.27.0",
     "@xyflow/react": "^12.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "recharts": "^2.10.3"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.2",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
