Rename Feature PRD Runner to Agent Orchestrator across API, CLI, and docs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "feature-prd-runner"
+name = "agent-orchestrator"
 version = "0.1.0"
 description = "Standalone helper module for long-running feature development driven by a PRD."
 readme = "README.md"
@@ -45,7 +45,7 @@ strict = true
 ignore_missing_imports = true
 
 [project.scripts]
-feature-prd-runner = "feature_prd_runner.cli_v3:main"
+agent-orchestrator = "feature_prd_runner.cli_v3:main"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
